Update blog title, subtitle, and avatar URL

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"Yuのblog",
+    "subTitle":"一个高中生的博客",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/136226133?v=4",
     "GMEEK_VERSION":"last"
 }
